style: add fade animation comment in header.scss; ensure body overflow is hidden in _container.scss

--- a/src/assets/scss/general/_container.scss
+++ b/src/assets/scss/general/_container.scss
@@ -7,4 +7,5 @@
 body {
   font-family: "Inter";
   height: 100vh;
+  overflow: hidden;
 }
